input-btn-bgcolor

--- a/loginPage.html
+++ b/loginPage.html
@@ -43,7 +43,7 @@
         c0.001-0.001,0.002-0.001,0.003-0.002l6.19,5.238C36.971,39.205,44,34,44,24C44,22.659,43.862,21.35,43.611,20.083z">
                     </path>
                 </svg>
-                <span>Log in with Google</span>
+                <span style="background-color: white;">Log in with Google</span>
             </div>
         </div>
     </div>
