--- a/loginPage.html
+++ b/loginPage.html
@@ -17,8 +17,8 @@
     <div class="form-container">
         <p class="title ibm-plex-mono-bold">Welcome Back</p>
         <form class="form">
-            <input type="email" class="input" placeholder="Email">
-            <input type="password" class="input" placeholder="Password">
+            <input type="email" class="input" placeholder="Email" required>
+            <input type="password" class="input" placeholder="Password" required>
             <p class="forgot-password-link">
                 <span class="forgot-password-lbl ibm-plex-mono-regular">Forgot Password?</span>
             </p>
